# c-labyrinth

./: .gitignore  CMakeLists.txt  Makefile  README.md
dev/libs/custom-color/: custom-color.h
dev/resources/home-config/: map.yaml
dev/src/rendering/: home-rendering.c  home-rendering.h
devtools/: Makefile
libs/custom-color/: CMakeLists.txt
libs/libyaml/: .gitignore
resources/game-assets/ennemies/: config.yaml
resources/game-assets/heroes/: config.yaml
resources/game-assets/items/: config.yaml
resources/game-assets/songs/: config.yaml
resources/game-assets/sounds/: config.yaml
resources/game-assets/tills/: config.yaml
resources/home-config/: map.yaml
resources/levels-config/level-1/: level.yaml
src/: game.c
src/assets-manager/: assets.h
src/assets-manager/assets/: assets.h
src/assets-manager/config-manager/: config-manager.c  config-manager.h  enemies-manager.c  ennemies-manager.c  ennemies-manager.h  game-map-manager.c  game-map-manager.h  heroes-manager.c  heroes-manager.h  image-config-manager.c  image-config-manager.h  items-manager.c  items-manager.h  levels-manager.c  levels-manager.h  sounds-manager.c  sounds-manager.h  tills-manager.c  tills-manager.h
src/assets-manager/image-loader/: image-loader.c  image-loader.h  image.h
src/components/text/: text-component.c  text-component.h
src/game/: game.c  game.h  window-manager.c  window-manager.h
src/rendering/: home-rendering.c  home-rendering.h  level-list-rendering.c  level-list-rendering.h  rendering.c  rendering.h
src/utils/generic-list/: generic-list.c  generic-list.h
(+24 files in other folders)
